Implemented selection of cards

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -39,6 +39,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Client.Logic\Client.Logic.csproj" />
   </ItemGroup>
 
