--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -34,6 +34,7 @@
     <None Remove="Assets\Images\Cards\Wizard.png" />
     <None Remove="Assets\Images\GameChat.png" />
     <None Remove="Assets\Images\GeneralChat.png" />
+    <None Remove="Sql\_applyAll.bat" />
     <None Remove="Views\Login.xaml" />
     <None Remove="Views\User\CreateAccount.xaml" />
   </ItemGroup>
