Few minor changes within namespaces

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,6 +72,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\DataHolder.cs" />
+    <Compile Include="Enums\CursorTypes.cs" />
+    <Compile Include="Enums\SelectionType.cs" />
     <Compile Include="Game\Cards\DefensiveCard.cs" />
     <Compile Include="Game\Cards\MeleeCard.cs" />
     <Compile Include="Game\Cards\PlayableCard.cs" />
