Few minor fixes and started preparing for carddeck UI

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -106,6 +106,9 @@
     <Page Update="Views\Game\Chat.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="Controls\CardDeck.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Game\PlayingGame.xaml">
       <SubType>Designer</SubType>
     </Page>
