--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -100,6 +100,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Views\Game\CombatLog.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Game\GamePage.xaml">
       <SubType>Designer</SubType>
     </Page>
