--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -167,6 +167,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Database\DbEntities.h" />
     <ClInclude Include="Multiplatform\NetworkCommunication.h" />
     <ClInclude Include="Server\Cards\Card.h" />
+    <ClInclude Include="Server\Cards\CardDefines.h" />
     <ClInclude Include="Server\Cards\DefensiveCard.h" />
     <ClInclude Include="Server\Cards\MeleeCard.h" />
     <ClInclude Include="Server\Cards\PlayableCard.h" />
