--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -41,7 +41,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
-    <PackageReference Include="Notifications.Wpf.Core" Version="1.3.1" />
+    <PackageReference Include="Notifications.Wpf.Core" Version="1.3.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -75,6 +75,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Texts.resx</DependentUpon>
     </Compile>
+    <Compile Update="Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -97,6 +102,10 @@
     <None Update="Assets\Data\data.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -110,6 +119,9 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Controls\CardDeck.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Views\Settings\SettingsPage.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Views\Game\PlayingGame.xaml">
