--- a/Client/packages.config
+++ b/Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Arci.Networking" version="2.0.1" targetFramework="net472" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net472" />
 </packages>
