--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="Server\Cards\CardDefines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Database\PreparedStatement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server\DataHolder.cpp">
