Added new spell effect allowing swapping cards on deck, added new attribute allowing spell to continue move

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -169,6 +169,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Multiplatform\NetworkCommunication.h" />
     <ClInclude Include="Server\Achievements\Achievement.h" />
     <ClInclude Include="Server\Achievements\AchievementCriteria.h" />
+    <ClInclude Include="Server\Achievements\AchievementCriteriaEntry.h" />
     <ClInclude Include="Server\Achievements\AchievementMgr.h" />
     <ClInclude Include="Server\Cards\Card.h" />
     <ClInclude Include="Server\Cards\CardDefines.h" />
@@ -209,6 +210,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClCompile Include="Database\DbCommandHandler.cpp" />
     <ClCompile Include="Server\Achievements\Achievement.cpp" />
     <ClCompile Include="Server\Achievements\AchievementCriteria.cpp" />
+    <ClCompile Include="Server\Achievements\AchievementCriteriaEntry.cpp" />
     <ClCompile Include="Server\Achievements\AchievementMgr.cpp" />
     <ClCompile Include="Server\Cards\Card.cpp" />
     <ClCompile Include="Server\Cards\DefensiveCard.cpp" />
