--- a/.github/workflows/cpp-ubuntu.yml
+++ b/.github/workflows/cpp-ubuntu.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: create output
+      working-directory: ./Server
+      run: mkdir output
     - name: setup permissions
       working-directory: ./Server
       run: chmod u+rx BUILD
